# ncvis

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  MANIFEST.in  Makefile  Makefile.old  README.md  SHORT_README.md  azure-conda.yml  azure-pipelines.yml  download.sh  massif.out.1985  setup.py
azure_templates/: all.yml  linux.yml  macos.yml  windows.yml
examples/: benchmark.ipynb  requirements-conda.txt  requirements-pip.txt  sample.py
examples/data/: __init__.py  download.sh  requirements.txt
examples/utils/: __init__.py
lib/: CMakeLists.txt
lib/table/: CMakeLists.txt  table.hpp
ncvis/: __init__.py  ncvis.cpp  ncvis.pxd  ncvis.pyx
notebooks/: datasets.ipynb  sample.py
recipe/: bld.bat  build.sh  conda_build_config.yaml  meta.yaml  test.py
src/: CMakeLists.txt  knntable  knntable.cpp  knntable.h  knntable.hpp  main.c  main.cpp  ncvis.c  ncvis.cpp  ncvis.h  ncvis.hpp
src/ncvis/: knntable.cpp  main.cpp  ncvis.hpp
src/shared/: main  main.cpp  strideiter.hpp  table.cpp  table.hpp
src/simplexvis/: CMakeLists.txt  main.cpp  simplexvis.cpp  simplexvis.hpp  simplicialset.cpp  simplicialset.hpp  table.hpp
travis/: before_install.cmd  before_install.sh  before_install_handle.sh  build.cmd  build.sh  install.cmd  install.sh  prepare.bat  prepare.cmd  test.sh  upload.cmd  upload.sh
wrapper/: cncvis.pxd  ncvis.pyx
